@@ -1,3 +1,8 @@
+2005-02-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/build.c (build): Keep interactive mode on, even if on a
+	terminal, if verbose mode (-v) was turned on.
+
 2005-01-31  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* src/scanner.h: Declare yytext signed on AIX (without stating a
